--- a/ejercicios-aerobicos.html
+++ b/ejercicios-aerobicos.html
@@ -239,8 +239,17 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row text-center py-1">
-            <div class="col">
+        <div class="row text-center py-1 text-white bg-dark footer-list">
+            <div class="col-12 d-flex justify-content-center">
+                <ul class="text-center pb-2 pt-3">
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/nota-legal/">Nota legal</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-uso/">Condiciones de uso</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-compra/">Condiciones de compra</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/politica-de-privacidad-y-cookies/">Politica de privacidad y cookies</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/contacto-gym/">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="col-12">
                 <p class="lead" style="font-size:0.8rem;">© Artic Technologic, S.L.- Avda. Prat de la Riba, 77 – 08401 Granollers – CIF B65837676 - RM de Barcelona: tomo 43367, folio 45, hoja B426697, inscrip. 1</p>
             </div>
         </div>
