--- a/fitness-online-tarifas-descuento.html
+++ b/fitness-online-tarifas-descuento.html
@@ -121,15 +121,15 @@
 
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
-            <div class="col text-center no-padding">
-                <p class="text-uppercase text-white font-weight-bold h2 pb-5 pt-2"><strong class="text-primary">20%</strong> dto.<br>Código <strong class="text-primary">FIT20</strong></p>
+            <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">FIT20</span></strong><br>Últimos días</p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2">Tus ejercicios de Fitness en casa</h2>
+                <h2 class="text-white font-weight-bold py-5 px-2 hidden-xs-down">Tus ejercicios de Fitness en casa</h2>
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
-                  <div class="container no-padding">
+                  <div class="container no-padding mt-5">
                     <div class="navbar-header">
                       <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a></p>
                     </div>
@@ -251,8 +251,17 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row text-center py-1">
-            <div class="col">
+        <div class="row text-center py-1 text-white bg-dark footer-list">
+            <div class="col-12 d-flex justify-content-center">
+                <ul class="text-center pb-2 pt-3">
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/nota-legal/">Nota legal</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-uso/">Condiciones de uso</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-compra/">Condiciones de compra</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/politica-de-privacidad-y-cookies/">Politica de privacidad y cookies</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/contacto-gym/">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="col-12">
                 <p class="lead" style="font-size:0.8rem;">© Artic Technologic, S.L.- Avda. Prat de la Riba, 77 – 08401 Granollers – CIF B65837676 - RM de Barcelona: tomo 43367, folio 45, hoja B426697, inscrip. 1</p>
             </div>
         </div>
