--- a/fitness-online.html
+++ b/fitness-online.html
@@ -55,7 +55,7 @@
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.comhomes/fitness-online.html” />
+    <link rel=”canonical” href=”https://www.ictiva.com/homes/fitness-online.html” />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -121,36 +121,15 @@
 
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
-            <div class="col text-center no-padding">
+            <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">FIT20</span></strong><br>Últimos días</p>
                 <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2">Tus ejercicios de Fitness en casa</h2>
-
-                <!-- Button trigger modal 
-                <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
-                  <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
-                </button>
-                
-
-                <!-- Modal 
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-body embed-responsive embed-responsive-16by9">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                                <iframe src="https://player.vimeo.com/video/232641103?color=fcbe17&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                -->
+                <h2 class="text-white font-weight-bold py-5 px-2 hidden-xs-down">Tus ejercicios de Fitness en casa</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
-                  <div class="container no-padding">
+                  <div class="container no-padding mt-5">
                     <div class="navbar-header">
                       <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a></p>
                     </div>
@@ -272,8 +251,17 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row text-center py-1">
-            <div class="col">
+        <div class="row text-center py-1 text-white bg-dark footer-list">
+            <div class="col-12 d-flex justify-content-center">
+                <ul class="text-center pb-2 pt-3">
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/nota-legal/">Nota legal</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-uso/">Condiciones de uso</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-compra/">Condiciones de compra</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/politica-de-privacidad-y-cookies/">Politica de privacidad y cookies</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/contacto-gym/">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="col-12">
                 <p class="lead" style="font-size:0.8rem;">© Artic Technologic, S.L.- Avda. Prat de la Riba, 77 – 08401 Granollers – CIF B65837676 - RM de Barcelona: tomo 43367, folio 45, hoja B426697, inscrip. 1</p>
             </div>
         </div>
