--- a/ejercicios-para-adelgazar.html
+++ b/ejercicios-para-adelgazar.html
@@ -47,7 +47,7 @@
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
     <meta name="description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
-    <meta name="keywords" content="Ejercicios para adelgazar, ejercicios para perder peso, dieta para adelgazar, dieta para perder peso, rutina para adelgazar, rutinas para perder peso, bajar peso, perder kilos" />
+    <meta name="keywords" content="Ejercicios para adelgazar, ejercicios para perder peso, dieta para adelgazar, dieta para perder peso, rutina para adelgazar, rutinas para perder peso, bajar peso, perder kilos, Ejercicios para adelgazar en casa" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa." />
     <meta property="og:description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
@@ -121,14 +121,15 @@
 
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
-            <div class="col text-center no-padding">
+            <div class="col text-center no-padding promo">
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">ADE20</span></strong><br>Últimos días</p>
                 <h1 class="display-1 text-white text-uppercase text-shadow less3">Ejercicios Para Adelgazar</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2 less">Planes de entrenamiento y dietas para perder peso en casa</h2>
+                <h2 class="text-white font-weight-bold py-5 px-2 less hidden-xs-down">Planes de entrenamiento y dietas para perder peso en casa</h2>
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
-                  <div class="container no-padding">
+                  <div class="container no-padding mt-5">
                     <div class="navbar-header">
                       <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a></p>
                     </div>
@@ -202,25 +203,13 @@
             </div>
         </div>
     </section>
-
-    <div class="container-fluid py-5 px-sm-5 bg-motiaerobicos">
-        <div class="row py-5 my-0 align-items-center h-100">
-            <div class="col-12 offset-md-2 col-md-10 text-white text-right px-md-5">
-              <h3 class="display-4 py-4 text-uppercase">Entrena con nuestros videos de ejercicios para adelgazar</h3>
-              <p class="lead py-0 text-bigger">La herramienta perfecta para bajar peso en casa que te premia por mantenerte activo!</p>
-              <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a>
-                </p>
-            </div>
-        </div>
-    </div>
     <div class="container-fluid py-5 px-sm-5 bg-motinutrition">
         <div class="row py-5 my-0 align-items-center h-100">
             <div class="col-12 offset-md-3 col-md-9 text-white text-right px-md-5">
               <h3 class="display-4 py-4 text-uppercase">Planes nutricionales</h3>
               <p class="lead py-0 text-bigger">Dietas desarrolladas por expertos nutricionistas para que cumplas tus objetivos.</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a>
                 </p>
             </div>
         </div>
@@ -245,9 +234,28 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid bg-darkgrey">
+        <div class="col-12">
+            <ul class="pl-0">
+                <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/nota-legal/">Nota legal</a></li>
+                <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/condiciones-de-uso/">Condiciones de uso</a></li>
+                <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/condiciones-de-compra/">Condiciones de compra</a></li>
+                <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/politica-de-privacidad-y-cookies/">Politica de privacidad y cookies</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="container-fluid">
-        <div class="row text-center py-1">
-            <div class="col">
+        <div class="row text-center py-1 text-white bg-dark footer-list">
+            <div class="col-12 d-flex justify-content-center">
+                <ul class="text-center pb-2 pt-3">
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/nota-legal/">Nota legal</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-uso/">Condiciones de uso</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/condiciones-de-compra/">Condiciones de compra</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/politica-de-privacidad-y-cookies/">Politica de privacidad y cookies</a></li>
+                    <li class="footer-list-item float-left mx-3" style="font-size:0.9rem;line-height:1.7rem"><a href="https://www.ictiva.com/contacto-gym/">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="col-12">
                 <p class="lead" style="font-size:0.8rem;">© Artic Technologic, S.L.- Avda. Prat de la Riba, 77 – 08401 Granollers – CIF B65837676 - RM de Barcelona: tomo 43367, folio 45, hoja B426697, inscrip. 1</p>
             </div>
         </div>
