--- a/ejercicios-para-hacer-en-casa-tarifas-descuento.html
+++ b/ejercicios-para-hacer-en-casa-tarifas-descuento.html
@@ -233,6 +233,23 @@
             </div>
         </div>
     </section>
+    <div class="container-fluid py-5 px-sm-5 bg-motinutrition">
+        <div class="row py-5 my-0 align-items-center h-100">
+            <div class="col-12 offset-md-3 col-md-9 text-white text-right px-md-5">
+              <h3 class="display-4 py-4 text-uppercase">Planes nutricionales</h3>
+              <p class="lead py-0 text-bigger">Dietas desarrolladas por expertos nutricionistas para que cumplas tus objetivos.</p>
+              <p class="lead py-0 text-bigger">Equilibrada<br>
+                Para Adelgazar<br>
+                Vientre Plano<br>
+                Para Muscular<br>
+                Para Tonificar<br>
+                Para abdominales</p>
+              <p class="py-5">
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-de&utm_medium=adwords-landing&utm_campaign=ejercicios">Abónate</a>
+                </p>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid py-5 px-sm-5 bg-app">
         <div class="row py-0 py-lg-5 my-0 align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-9 text-white px-md-5">
