--- a/entrenamiento-en-casa-tarifas.html
+++ b/entrenamiento-en-casa-tarifas.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa.</title>
+    <title>Entrenamiento en casa. Realiza nuestras rutinas de entrenamiento online y ponte en forma con ictiva</title>
 
     <!-- Google Optimze -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,16 +46,16 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
-    <meta name="keywords" content="Ejercicios para adelgazar, ejercicios para perder peso, dieta para adelgazar, dieta para perder peso, rutina para adelgazar, rutinas para perder peso, bajar peso, perder kilos, Ejercicios para adelgazar en casa" />
+    <meta name="description" content="Entrenamiento en casa. Más de 800 sesiones de entrenamiento online para ponerte en forma. PRUEBA GRATIS AHORA." />
+    <meta name="keywords" content="Entrenamiento en casa, Entrenamiento Online, Entrenamiento Virtual, Rutinas de entrenamiento, videos de entrenamiento en casa, entrenar en casa" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa." />
-    <meta property="og:description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
-    <meta property="og:url" content="https://www.ictiva.com/homes/ejercicios-para-adelgazar.html" />
+    <meta property="og:title" content="Entrenamiento en casa. Realiza nuestras rutinas de entrenamiento online y ponte en forma con ictiva." />
+    <meta property="og:description" content="Entrenamiento en casa. Más de 800 sesiones de entrenamiento online para ponerte en forma. PRUEBA GRATIS AHORA." />
+    <meta property="og:url" content="https://www.ictiva.com/homes/entrenamiento-en-casa-tarifas.html" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/homes/ejercicios-para-adelgazar.html” />
+    <link rel=”canonical” href=”https://www.ictiva.com/homes/entrenamiento-en-casa-tarifas.html” />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -122,24 +122,24 @@
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">ADE20</span></strong><br>Últimos días</p>
-                <h1 class="display-1 text-white text-uppercase text-shadow less3">Ejercicios Para Adelgazar</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2 less hidden-xs-down">Planes de entrenamiento y dietas para perder peso en casa</h2>
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">FIT20</span></strong><br>Últimos días</p>
+                <h1 class="display-1 text-white text-uppercase text-shadow less">Entrenamiento en Casa</h1>
+                <h2 class="text-white font-weight-bold py-5 px-2 less">Rutinas de Entreno Online</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar-tarifas-dto&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento Ahora</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20">Inicia tu Entrenamiento Ahora</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
-                  <div class="container no-padding mt-5">
+                  <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar-tarifas-dto&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento Ahora</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20">Inicia tu Entrenamiento Ahora</a></p>
                     </div>
                   </div>
                 </div>
             </div>
         </div>
         <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/video1-aerobic-combat.webm" type="video/webm">
-            <source src="homes/video/video1-aerobic-combat.mp4" type="video/mp4">
+            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
     </header>
@@ -177,32 +177,59 @@
             </div>
         </div>
     </section>
-    <section class="no-padding">
-        <div class="container-fluid bg-aerobicos">
-            <div class="row no-gutter">
-                <div class="col-lg-6 rc-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Entrenamiento para perder peso</h2>
-                    </div>
+    <section class="no-padding" id="top-section">
+        <div class="container-fluid">
+            <div class="row no-padding">
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Entrenamiento por niveles</h2>
+                            <div class="hidden-sm-down text-white">
+                                <p class="lead mt-5 text-bigger">Principiante</p>
+                                <p class="lead text-bigger">Básico</p>
+                                <p class="lead text-bigger">Medio</p>
+                                <p class="lead text-bigger">Avanzado</p>
+                                <p class="lead text-bigger">Pro</p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20">Inicia tu Entrenamiento</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
                 </div>
-                <div class="col-lg-6 lw-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Ejercicios para quemar celulitis</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 sp-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Rutinas para quemar calorías</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 tu-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Ejercicios para reducir grasa corporal</h2>
-                    </div>
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Ejercicios de entrenamiento<span class="hidden-sm-down"> para:</span></h2>
+                            <div class="hidden-sm-down text-white">
+                                <p class="lead mt-5 text-bigger">Perder peso</p>
+                                <p class="lead text-bigger">Tonificar tu cuerpo</p>
+                                <p class="lead text-bigger">Ganar masa muscular</p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20">Inicia tu Entrenamiento</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
     </section>
+
+    <div class="container-fluid py-5 px-sm-5 bg-motitrainer">
+        <div class="row py-5 my-0 align-items-center h-100">
+            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-md-5">
+              <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de Fitness</h3>
+              <p class="lead py-2 text-bigger">La herramienta perfecta para ponerte en forma en casa que te premia por mantenerte activo!</p>
+              <p class="lead py-2 text-bigger">Gana Viajes, Packs de Ocio, Accesorios deportivos y mucho más...!</p>
+              <p class="py-5">
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20">Inicia tu Entrenamiento</a>
+                </p>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid py-5 px-sm-5 bg-motinutrition">
         <div class="row py-5 my-0 align-items-center h-100">
             <div class="col-12 offset-md-3 col-md-9 text-white text-right px-md-5">
@@ -215,7 +242,7 @@
                 Para Tonificar<br>
                 Para abdominales</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-de&utm_medium=adwords-landing&utm_campaign=ejercicios">Abónate</a>
                 </p>
             </div>
         </div>
@@ -223,11 +250,11 @@
     <div class="container-fluid py-5 px-sm-5 bg-app">
         <div class="row py-0 py-lg-5 my-0 align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-9 text-white px-md-5">
-              <h3 class="display-4 py-4 text-uppercase">Rutina de ejercicios para perder peso en casa</h3>
+              <h3 class="display-4 py-4 text-uppercase">Tu rutina de Entrenamiento para ponerte en forma en casa</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=entrenamiento-en-casa&utm_medium=adwords-landing&utm_campaign=entrenamiento-fit20" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
@@ -272,13 +299,13 @@
 
     <script src="homes/js/tutorial.min.js"></script>
 
-    <script>
+    <script> 
       $('.navbar-nav>li>a').on('click', function(){
         $('.navbar-collapse').collapse('hide');
       });
     </script>
 
-     <!--typo-->
+     <!--typo-->    
     <script src="https://use.typekit.net/wjv2qsz.js"></script>
     <script>
         // <![CDATA[
