--- a/fitness-online-tarifas-descuento.html
+++ b/fitness-online-tarifas-descuento.html
@@ -224,8 +224,26 @@
             <div class="col-12 offset-md-4 col-md-8 text-white text-right px-md-5">
               <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de Fitness</h3>
               <p class="lead py-2 text-bigger">La herramienta perfecta para ponerte en forma en casa que te premia por mantenerte activo!</p>
+              <p class="lead py-2 text-bigger">Gana Viajes, Packs de Ocio, Accesorios deportivos y mucho más...!</p>
               <p class="py-5">
                     <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5 px-sm-5 bg-motinutrition">
+        <div class="row py-5 my-0 align-items-center h-100">
+            <div class="col-12 offset-md-3 col-md-9 text-white text-right px-md-5">
+              <h3 class="display-4 py-4 text-uppercase">Planes nutricionales</h3>
+              <p class="lead py-0 text-bigger">Dietas desarrolladas por expertos nutricionistas para que cumplas tus objetivos.</p>
+              <p class="lead py-0 text-bigger">Equilibrada<br>
+                Para Adelgazar<br>
+                Vientre Plano<br>
+                Para Muscular<br>
+                Para Tonificar<br>
+                Para abdominales</p>
+              <p class="py-5">
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-de&utm_medium=adwords-landing&utm_campaign=ejercicios">Abónate</a>
                 </p>
             </div>
         </div>
